--- a/src/Admin/templates/Teacher/update.latte
+++ b/src/Admin/templates/Teacher/update.latte
@@ -24,6 +24,11 @@
 					{input department class => 'form-control'}
 		        </div>
 
+		        <div class="form-group">
+					{label fields /}
+					{input fields class => 'form-control'}
+		        </div>
+
 	        </div>
 
         </div>
