--- a/src/Admin/templates/Field/update.latte
+++ b/src/Admin/templates/Field/update.latte
@@ -1,11 +1,11 @@
 {block content}
 
 	<div class="page-heading">	
-		<h1>{_'Add/edit teacher'}</h1>
+		<h1>{_'Add/edit field'}</h1>
 	</div>
 
 	<div class="control-group">
-		<a n:href="default idPage => $idPage" class="back">{_'Back to teachers'}</a>
+		<a n:href="default idPage => $idPage" class="back">{_'Back to fields'}</a>
 	</div>
 
 	{form form}
@@ -17,16 +17,6 @@
 				<div class="form-group">
 					{label name /}
 					{input name class => 'form-control'}
-		        </div>
-
-		        <div class="form-group">
-					{label department /}
-					{input department class => 'form-control'}
-		        </div>
-
-		        <div class="form-group">
-					{label fields /}
-					{input fields class => 'form-control'}
 		        </div>
 
 	        </div>
