--- a/src/Admin/templates/boxes.latte
+++ b/src/Admin/templates/boxes.latte
@@ -1,8 +1,13 @@
 {block #content}
-	
-	{include tabs.latte active => 'boxes'}
+
+	<div class="page-heading">
+		<h1>{$actualPage->getTitle()}</h1>
+
+		{include tabs.latte active => 'boxes'}
+	</div>
 	
 	{var t = $basePathModule . "AdminModule/templates/system/boxesSettings.latte"}
   	{include $t id => $idPage}
 
 {/block}
+
