--- a/src/Admin/templates/seo.latte
+++ b/src/Admin/templates/seo.latte
@@ -1,6 +1,10 @@
 {block #content}
-	
-	{include tabs.latte active => 'seo'}
+
+	<div class="page-heading">
+		<h1>{$actualPage->getTitle()}</h1>
+
+		{include tabs.latte active => 'seo'}
+	</div>
 	
 	{var t = $basePathModule . "AdminModule/templates/system/seoSettings.latte"}
   	{include $t id => $idPage}
