--- a/src/Admin/templates/Teacher/update.latte
+++ b/src/Admin/templates/Teacher/update.latte
@@ -29,7 +29,11 @@
 					{input fields class => 'form-control'}
 		        </div>
 
+		        <a n:href=":Admin:Filesystem:default dialog => true, multiple => false" data-container="#pictures" class="btn btn-primary ajax filesDialog" data-remote="false" data-target="#myModal" data-toggle="modal">{_'Load photo'}</a>
+
 	        </div>
+
+
 
         </div>
 
