--- a/src/Admin/templates/Teacher/update.latte
+++ b/src/Admin/templates/Teacher/update.latte
@@ -12,7 +12,7 @@
 
 		<div class="control-group row">
 
-			<div class="col-md-6">
+			<div class="col-md-10">
 
 				<div class="form-group">
 					{label name /}
@@ -29,8 +29,33 @@
 					{input fields class => 'form-control'}
 		        </div>
 
+		        <div class="form-group">
+					{label perex /}
+					{input perex class => 'form-control editor'}
+		        </div>
+
+		        <div class="form-group">
+					{label text /}
+					{input text class => 'form-control editor'}
+		        </div>
+
 		        <a n:href=":Admin:Filesystem:default dialog => true, multiple => false" data-container="#pictures" class="btn btn-primary ajax filesDialog" data-remote="false" data-target="#myModal" data-toggle="modal">{_'Load photo'}</a>
 
+	        </div>
+
+	        <div class="col-md-10" id="pictures">
+	        	{if $teacher->getId()}
+	        		{if $teacher->getPhoto()}
+						<div class="col-md-3 jq_fileBox">
+							<div class="img-thumbnail">
+								<img src="{$basePath}{$teacher->getPhoto()->getPath()|thumbnail:'teacher'}" />
+								<input type="hidden" name="files[]" value="{$teacher->getPhoto()->getPath()}" />
+								<input class="form-control" type="text" name="fileNames[]" value="{$teacher->getPhoto()->getTitle()}" />
+								<span class="btn btn-default jq_fileDelete">&times</span>
+							</div>
+						</div>
+					{/if}
+				{/if}
 	        </div>
 
 
