--- a/src/Admin/templates/Teacher/update.latte
+++ b/src/Admin/templates/Teacher/update.latte
@@ -44,7 +44,7 @@
 	        </div>
 
 	        <div class="col-md-10" id="pictures">
-	        	{if $teacher->getId()}
+	        	{if $teacher}
 	        		{if $teacher->getPhoto()}
 						<div class="col-md-3 jq_fileBox">
 							<div class="img-thumbnail">
