--- a/src/Admin/templates/Subject/update.latte
+++ b/src/Admin/templates/Subject/update.latte
@@ -35,8 +35,18 @@
 		        </div>
 
 		        <div class="form-group">
+					{label urlPlan /}
+					{input urlPlan class => 'form-control editor'}
+		        </div>
+
+		        <div class="form-group">
 					{label textSchedule /}
 					{input textSchedule class => 'form-control editor'}
+		        </div>
+
+		        <div class="form-group">
+					{label urlSchedule /}
+					{input urlSchedule class => 'form-control editor'}
 		        </div>
 
 		        <div class="form-group">
@@ -63,20 +73,20 @@
 
 	        </div>
 
-	        {* <div class="col-md-10" id="pictures">
-	        	{if $teacher}
-	        		{if $teacher->getPhoto()}
+	        <div class="col-md-10" id="pictures">
+	        	{if $subject}
+	        		{if $subject->getPhoto()}
 						<div class="col-md-3 jq_fileBox">
 							<div class="img-thumbnail">
-								<img src="{$basePath}{$teacher->getPhoto()->getPath()|thumbnail:'teacher'}" />
-								<input type="hidden" name="files[]" value="{$teacher->getPhoto()->getPath()}" />
-								<input class="form-control" type="text" name="fileNames[]" value="{$teacher->getPhoto()->getTitle()}" />
+								<img src="{$basePath}{$subject->getPhoto()->getPath()|thumbnail:'subject'}" />
+								<input type="hidden" name="files[]" value="{$subject->getPhoto()->getPath()}" />
+								<input class="form-control" type="text" name="fileNames[]" value="{$subject->getPhoto()->getTitle()}" />
 								<span class="btn btn-default jq_fileDelete">&times</span>
 							</div>
 						</div>
 					{/if}
 				{/if}
-	        </div> *}
+	        </div>
 
 
 
