--- a/src/Admin/templates/Category/default.latte
+++ b/src/Admin/templates/Category/default.latte
@@ -8,7 +8,7 @@
 	
 	<br />
 	<div class="buttonWrap">
-		<a class="btn btn-primary ajax" n:href="update idPage => $actualPage->getId()">{_'Add Field'}</a>
+		<a class="btn btn-primary ajax" n:href="update idPage => $actualPage->getId()">{_'Add Category'}</a>
 	</div>
 
 	<div class="control-group">
