--- a/src/Admin/templates/Material/update.latte
+++ b/src/Admin/templates/Material/update.latte
@@ -26,7 +26,7 @@
 
 		        <div class="form-group">
 					{label author /}
-					{input author class => 'form-control editor'}
+					{input author class => 'form-control'}
 		        </div>
 
 		        <div class="form-group">
