--- a/src/Admin/templates/Subject/update.latte
+++ b/src/Admin/templates/Subject/update.latte
@@ -36,7 +36,7 @@
 
 		        <div class="form-group">
 					{label urlPlan /}
-					{input urlPlan class => 'form-control editor'}
+					{input urlPlan class => 'form-control'}
 		        </div>
 
 		        <div class="form-group">
@@ -46,7 +46,7 @@
 
 		        <div class="form-group">
 					{label urlSchedule /}
-					{input urlSchedule class => 'form-control editor'}
+					{input urlSchedule class => 'form-control'}
 		        </div>
 
 		        <div class="form-group">
