material fields, teachers page

--- a/src/Admin/templates/Material/tabs.latte
+++ b/src/Admin/templates/Material/tabs.latte
@@ -2,6 +2,7 @@
 	{if $template->checkPermissions($user, 'admin:Pages')}
 		<li {if $active == "items"}class="active"{/if}><a class="ajax contentTab" n:href="Material:default idPage => $idPage">{_'Materials'}</a></li>
 		<li {if $active == "categories"}class="active"{/if}><a class="ajax contentTab" n:href="Category:default idPage => $idPage">{_'Categories'}</a></li>
+		<li {if $active == "fields"}class="active"{/if}><a class="ajax contentTab" n:href="Field:default idPage => $idPage">{_'Fields'}</a></li>
 		<li {if $active == "settings"}class="active"{/if}><a class="ajax settingsTab" n:href="Settings:default idPage => $idPage">{_'Settings'}</a></li>
   
 	  {var t = $basePathModule . "AdminModule/templates/system/boxes.latte"}
