--- a/src/Admin/templates/Material/update.latte
+++ b/src/Admin/templates/Material/update.latte
@@ -35,6 +35,11 @@
 		        </div>
 
 		        <div class="form-group">
+					{label fields /}
+					{input fields class => 'form-control'}
+		        </div>
+
+		        <div class="form-group">
 					{label text /}
 					{input text class => 'form-control editor'}
 		        </div>
