--- a/src/Admin/templates/Teacher/tabs.latte
+++ b/src/Admin/templates/Teacher/tabs.latte
@@ -1,6 +1,7 @@
 <ul class="nav nav-tabs" id="myTab">
 	{if $template->checkPermissions($user, 'admin:Pages')}
 		<li {if $active == "items"}class="active"{/if}><a class="ajax contentTab" n:href="Teacher:default idPage => $idPage">{_'Teachers'}</a></li>
+		<li {if $active == "categories"}class="active"{/if}><a class="ajax contentTab" n:href="Category:default idPage => $idPage">{_'Categories'}</a></li>
 		<li {if $active == "fields"}class="active"{/if}><a class="ajax contentTab" n:href="Field:default idPage => $idPage">{_'Fields'}</a></li>
 		<li {if $active == "settings"}class="active"{/if}><a class="ajax settingsTab" n:href="Settings:default idPage => $idPage">{_'Settings'}</a></li>
   
