fields to Material, perex to presenter

--- a/src/Admin/templates/Absolvent/update.latte
+++ b/src/Admin/templates/Absolvent/update.latte
@@ -25,6 +25,11 @@
 		        </div>
 
 		        <div class="form-group">
+					{label perex /}
+					{input perex class => 'form-control editor'}
+		        </div>
+
+		        <div class="form-group">
 					{label text /}
 					{input text class => 'form-control editor'}
 		        </div>
