--- a/src/Admin/templates/Material/update.latte
+++ b/src/Admin/templates/Material/update.latte
@@ -44,6 +44,23 @@
 					{input text class => 'form-control editor'}
 		        </div>
 
+		        <a n:href=":Admin:Filesystem:default dialog => true, multiple => false" data-container="#pictures" class="btn btn-primary ajax filesDialog" data-remote="false" data-target="#myModal" data-toggle="modal">{_'Load photo'}</a>
+
+	        </div>
+
+	        <div class="col-md-10" id="pictures">
+	        	{if $material}
+	        		{if $material->getFile()}
+						<div class="col-md-3 jq_fileBox">
+							<div class="img-thumbnail">
+								<img src="{$basePath}/common/images/teacherDefault.png" />
+								<input type="hidden" name="files[]" value="{$material->getFile()->getPath()}" />
+								<input class="form-control" type="text" name="fileNames[]" value="{$material->getFile()->getTitle()}" />
+								<span class="btn btn-default jq_fileDelete">&times</span>
+							</div>
+						</div>
+					{/if}
+				{/if}
 	        </div>
 
         </div>
