--- a/src/Admin/templates/Material/update.latte
+++ b/src/Admin/templates/Material/update.latte
@@ -44,7 +44,7 @@
 					{input text class => 'form-control editor'}
 		        </div>
 
-		        <a n:href=":Admin:Filesystem:default dialog => true, multiple => false" data-container="#pictures" class="btn btn-primary ajax filesDialog" data-remote="false" data-target="#myModal" data-toggle="modal">{_'Load photo'}</a>
+		        <a n:href=":Admin:Filesystem:default dialog => true, multiple => false" data-container="#pictures" class="btn btn-primary ajax filesDialog" data-remote="false" data-target="#myModal" data-toggle="modal">{_'Load file'}</a>
 
 	        </div>
 
