--- a/src/Admin/templates/Field/update.latte
+++ b/src/Admin/templates/Field/update.latte
@@ -19,6 +19,16 @@
 					{input name class => 'form-control'}
 		        </div>
 
+		        <div class="form-group">
+					{label isTeacher /}
+					{input isTeacher class => 'form-control'}
+		        </div>
+
+		        <div class="form-group">
+					{label isMaterial /}
+					{input isMaterial class => 'form-control'}
+		        </div>
+
 	        </div>
 
         </div>
