--- a/src/Admin/templates/Teacher/update.latte
+++ b/src/Admin/templates/Teacher/update.latte
@@ -15,8 +15,23 @@
 			<div class="col-md-10">
 
 				<div class="form-group">
-					{label name /}
-					{input name class => 'form-control'}
+					{label degreeBefore /}
+					{input degreeBefore class => 'form-control'}
+		        </div>
+
+		        <div class="form-group">
+					{label firstName /}
+					{input firstName class => 'form-control'}
+		        </div>
+
+		        <div class="form-group">
+					{label lastName /}
+					{input lastName class => 'form-control'}
+		        </div>
+
+		        <div class="form-group">
+					{label degreeAfter /}
+					{input degreeAfter class => 'form-control'}
 		        </div>
 
 		        <div class="form-group">
