--- a/src/Admin/templates/Teacher/update.latte
+++ b/src/Admin/templates/Teacher/update.latte
@@ -20,13 +20,13 @@
 		        </div>
 
 		        <div class="form-group">
-					{label firstName /}
-					{input firstName class => 'form-control'}
+					{label firstname /}
+					{input firstname class => 'form-control'}
 		        </div>
 
 		        <div class="form-group">
-					{label lastName /}
-					{input lastName class => 'form-control'}
+					{label lastname /}
+					{input lastname class => 'form-control'}
 		        </div>
 
 		        <div class="form-group">
